Add drag and drop and add label caption.

--- a/SCME.WpfControlLibrary/Styles/Controls.xaml
+++ b/SCME.WpfControlLibrary/Styles/Controls.xaml
@@ -21,7 +21,7 @@
                     xmlns:dataTemplatesTestParameters="clr-namespace:SCME.WpfControlLibrary.DataTemplates.TestParameters">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Sizes.xaml" />
-        
+
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/RadioButton.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/RadioButton.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/CheckBox.xaml" />
@@ -31,18 +31,17 @@
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Button.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/ListViewItemTestParameter.xaml" />
         <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/TreeViewItemProfile.xaml" />
-        
-        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml"></ResourceDictionary>
+
+        <ResourceDictionary Source="/SCME.WpfControlLibrary;component/Styles/Common.xaml" />
     </ResourceDictionary.MergedDictionaries>
 
-  
-    
+
     <Style TargetType="Label" BasedOn="{StaticResource {x:Type Label}}">
         <Setter Property="FontFamily" Value="{DynamicResource SCME.DefaultFont}" />
         <Setter Property="FontSize" Value="{DynamicResource SCME.BaseFontSize}" />
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
-                <Setter Property="Foreground" Value="{DynamicResource LabelTextBrush}"/>
+                <Setter Property="Foreground" Value="{DynamicResource LabelTextBrush}" />
             </Trigger>
         </Style.Triggers>
     </Style>
@@ -59,6 +58,10 @@
     <Style TargetType="iconPacks:PackIconMaterial" BasedOn="{StaticResource {x:Type iconPacks:PackIconMaterial}}">
         <Setter Property="Height" Value="auto" />
         <Setter Property="Width" Value="auto" />
+    </Style>
+
+    <Style TargetType="ListViewItem" x:Key="DragDropListViewItem">
+        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
     </Style>
     
 
