--- a/SCME.ProfileBuilder/Pages/MatchingProfilesCodesPage.xaml
+++ b/SCME.ProfileBuilder/Pages/MatchingProfilesCodesPage.xaml
@@ -8,110 +8,139 @@
       xmlns:dataTemplates="WpfControlLibrary"
       xmlns:iconPacks="http://metro.mahapps.com/winfx/xaml/iconpacks"
       xmlns:viewModels="clr-namespace:SCME.WpfControlLibrary.ViewModels;assembly=SCME.WpfControlLibrary"
+      xmlns:system="clr-namespace:System;assembly=mscorlib"
       DataContext="{Binding RelativeSource={RelativeSource Self}, Path=Vm}"
-      mc:Ignorable="d" 
+      mc:Ignorable="d"
       d:DesignWidth="1280" d:DesignHeight="924"
-      Title="MatchingProfilesCodesPage" >
+      Title="MatchingProfilesCodesPage">
     <Page.Resources>
-        <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/SCME.WpfControlLibrary;component/Styles/Controls.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <DataTemplate DataType="{x:Type profiles:MyProfile}">
+                <dataTemplates:DragGrid>
+                    <Label Content="{Binding Name}" />
+                </dataTemplates:DragGrid>
+            </DataTemplate>
+
+        </ResourceDictionary>
     </Page.Resources>
     <TabControl>
         <TabItem Header="{x:Static res:Resources.Profiles}">
-            <Grid >
+            <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
                 <!-- <ComboBox Grid.Column="0" Grid.Row="0" ItemsSource="{Binding ActiveAndInactiveMmeCodes}" SelectedValue="{Binding SelectedMmeCode}"/> -->
-                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.IsActive}"/>
-                <dataTemplates:TextBoxWithTimer Grid.Column="0" Grid.Row="1" Interval="1000" Text="{Binding ActiveProfileFilterName, UpdateSourceTrigger=PropertyChanged}" Tick="OnDispatcherTimerFindActiveProfileOnTick" /> 
+                <Label Grid.Column="0" Grid.Row="0" Content="{x:Static res:Resources.ActiveProfiles}" />
+                <dataTemplates:TextBoxWithTimer Grid.Column="0" Grid.Row="1" Interval="1000" Text="{Binding ActiveProfileFilterName, UpdateSourceTrigger=PropertyChanged}" Tick="OnDispatcherTimerFindActiveProfileOnTick" />
                 <ListView Grid.Column="0" Grid.Row="2" ItemsSource="{Binding ActiveProfiles.View}" SelectionMode="Extended" SelectionChanged="ListViewActiveProfile_SelectionChanged"
-                              VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling" 
-                              VirtualizingStackPanel.CacheLength="1" VirtualizingStackPanel.CacheLengthUnit="Page"
-                              VirtualizingStackPanel.ScrollUnit="Item" >
-                        <ListView.Resources>
-                            <DataTemplate DataType="{x:Type profiles:MyProfile}" >
-                                    <Label Content="{Binding Name}" />
-                            </DataTemplate>
-                        </ListView.Resources>
-                </ListView>
-                
-                <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" VerticalAlignment="Center" >
-                    <Button  Style="{StaticResource ButtonWithIcon}" Command="{Binding MoveToInactive}">
+                          VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"
+                          VirtualizingStackPanel.CacheLength="1" VirtualizingStackPanel.CacheLengthUnit="Page"
+                          VirtualizingStackPanel.ScrollUnit="Item"
+                          ItemContainerStyle="{StaticResource DragDropListViewItem}"
+                          AllowDrop="True"
+                          Drop="ActiveProfiles_Drop" />
+
+                <StackPanel Grid.Column="1" Grid.Row="0" Grid.RowSpan="3" VerticalAlignment="Center">
+                    <Button Style="{StaticResource ButtonWithIcon}" Command="{Binding MoveToInactive}">
                         <iconPacks:PackIconMaterial Kind="ArrowRight" />
                     </Button>
-                    <Button  Style="{StaticResource ButtonWithIcon}" Command="{Binding MoveToActive}">
+                    <Button Style="{StaticResource ButtonWithIcon}" Command="{Binding MoveToActive}">
                         <iconPacks:PackIconMaterial Kind="ArrowLeft" />
                     </Button>
                 </StackPanel>
-                
-                <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.Inactive}"/>
+
+                <Label Grid.Column="2" Grid.Row="0" Content="{x:Static res:Resources.InactiveProfiles}" />
                 <dataTemplates:TextBoxWithTimer Grid.Column="2" Grid.Row="1" Interval="1000" Text="{Binding InactiveProfileFilterName, UpdateSourceTrigger=PropertyChanged}" Tick="OnDispatcherTimerFindInactiveProfileOnTick" />
                 <ListView Grid.Column="2" Grid.Row="2" ItemsSource="{Binding InactiveProfiles.View}" SelectionChanged="ListViewInactiveProfile_SelectionChanged"
                           VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"
                           VirtualizingStackPanel.CacheLength="1" VirtualizingStackPanel.CacheLengthUnit="Page"
-                          VirtualizingStackPanel.ScrollUnit="Item" >
-                    <ListView.Resources>
-                        <DataTemplate DataType="{x:Type profiles:MyProfile}" >
-                            <Label Content="{Binding Name}"/>
-                        </DataTemplate>
-                    </ListView.Resources>
-                </ListView>
+                          VirtualizingStackPanel.ScrollUnit="Item"
+                          ItemContainerStyle="{StaticResource DragDropListViewItem}"
+                          AllowDrop="True"
+                          Drop="InactiveProfiles_Drop" />
             </Grid>
         </TabItem>
         <TabItem Header="{x:Static res:Resources.MME_Profiles}">
             <Grid>
                 <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*"/>
-                    <ColumnDefinition Width="Auto" MinWidth="{Binding Source={StaticResource MinWidthForListViewMmeCode}}"/>
-                    <ColumnDefinition Width="Auto"/>
-                    <ColumnDefinition Width="Auto" MinWidth="{Binding Source={StaticResource MinWidthForListViewMmeCode}}"/>
+                    <ColumnDefinition Width="*" />
+                    <ColumnDefinition Width="Auto" MinWidth="{Binding Source={StaticResource MinWidthForListViewMmeCode}}" />
+                    <ColumnDefinition Width="Auto" />
+                    <ColumnDefinition Width="Auto" MinWidth="{Binding Source={StaticResource MinWidthForListViewMmeCode}}" />
                 </Grid.ColumnDefinitions>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
                 </Grid.RowDefinitions>
-                    <dataTemplates:TextBoxWithTimer Grid.Column="0" Grid.Row="0" Interval="1000" Text="{Binding ActiveProfilesForMmeCodesFilterName, UpdateSourceTrigger=PropertyChanged}" Tick="OnDispatcherTimerFindActiveProfileForMmeCodesOnTick" />
-                    <ListView Grid.Column="0" Grid.Row="1" ItemsSource="{Binding ActiveProfilesForMmeCodes.View}" SelectedValue="{Binding SelectedActiveProfile}"
-                              VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling" 
-                              VirtualizingStackPanel.CacheLength="1" VirtualizingStackPanel.CacheLengthUnit="Page"
-                              VirtualizingStackPanel.ScrollUnit="Item" >
-                        <ListView.Resources>
-                            <DataTemplate DataType="{x:Type profiles:MyProfile}" >
-                                <Label Content="{Binding Name}" />
-                            </DataTemplate>
-                        </ListView.Resources>
-                    </ListView>
-                <ListView Grid.Column="1" Grid.Row="1" ItemsSource="{Binding DisabledMmeCodes}" SelectionChanged="DisabledMmeCode_OnSelectionChanged" />
+                <dataTemplates:TextBoxWithTimer Grid.Column="0" Grid.Row="0" Interval="1000" Text="{Binding ActiveProfilesForMmeCodesFilterName, UpdateSourceTrigger=PropertyChanged}" Tick="OnDispatcherTimerFindActiveProfileForMmeCodesOnTick" />
+                <ListView Grid.Column="0" Grid.Row="1" ItemsSource="{Binding ActiveProfilesForMmeCodes.View}" SelectedValue="{Binding SelectedActiveProfile}"
+                          VirtualizingStackPanel.IsVirtualizing="True" VirtualizingStackPanel.VirtualizationMode="Recycling"
+                          VirtualizingStackPanel.CacheLength="1" VirtualizingStackPanel.CacheLengthUnit="Page"
+                          VirtualizingStackPanel.ScrollUnit="Item">
+                    <ListView.Resources>
+                        <DataTemplate DataType="{x:Type profiles:MyProfile}">
+                            <Label Content="{Binding Name}" />
+                        </DataTemplate>
+                    </ListView.Resources>
+                </ListView>
+                <Label Grid.Column="1" Grid.Row="0" Content="{x:Static res:Resources.ActiveMmeCodes}" />
+                <ListView Grid.Column="1" Grid.Row="1" ItemsSource="{Binding DisabledMmeCodes}" SelectionChanged="DisabledMmeCode_OnSelectionChanged"
+                          ItemContainerStyle="{StaticResource DragDropListViewItem}"
+                          AllowDrop="True"
+                          Drop="InactiveMmeCodes_Drop">
+                    <ListView.ItemTemplate>
+                        <DataTemplate DataType="{x:Type system:String}">
+                            <dataTemplates:DragGrid>
+                                <Label Content="{Binding}" />
+                            </dataTemplates:DragGrid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
                 <StackPanel Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" VerticalAlignment="Center">
-                    <Button  Style="{StaticResource ButtonWithIcon}" Command="{Binding AddMmeCodeToProfile}">
+                    <Button Style="{StaticResource ButtonWithIcon}" Command="{Binding AddMmeCodeToProfile}">
                         <iconPacks:PackIconMaterial Kind="ArrowRight" />
                     </Button>
-                    <Button  Style="{StaticResource ButtonWithIcon}" Command="{Binding RemoveMmeCodeToProfile}">
+                    <Button Style="{StaticResource ButtonWithIcon}" Command="{Binding RemoveMmeCodeToProfile}">
                         <iconPacks:PackIconMaterial Kind="ArrowLeft" />
                     </Button>
                 </StackPanel>
-                <ListView Grid.Column="3" Grid.Row="1" ItemsSource="{Binding EnabledMmeCodes}" SelectionChanged="EnabledMmeCode_OnSelectionChanged" />
+                <Label Grid.Column="3" Grid.Row="0" Content="{x:Static res:Resources.InactiveMmeCodes}" />
+                <ListView Grid.Column="3" Grid.Row="1" ItemsSource="{Binding EnabledMmeCodes}" SelectionChanged="EnabledMmeCode_OnSelectionChanged"
+                          ItemContainerStyle="{StaticResource DragDropListViewItem}"
+                          AllowDrop="True"
+                          Drop="ActiveMmeCodes_Drop">
+                    <ListView.ItemTemplate>
+                        <DataTemplate DataType="{x:Type system:String}">
+                            <dataTemplates:DragGrid>
+                                <Label Content="{Binding}" />
+                            </dataTemplates:DragGrid>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </Grid>
         </TabItem>
         <TabItem Header="{x:Static res:Resources.MME_Code}">
             <Grid>
                 <Grid.RowDefinitions>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="Auto"/>
-                    <RowDefinition Height="*"/>
-                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="Auto" />
+                    <RowDefinition Height="*" />
+                    <RowDefinition Height="Auto" />
                 </Grid.RowDefinitions>
-                <TextBox Grid.Column="0" Grid.Row="0" Text="{Binding NewMmeCode, UpdateSourceTrigger=PropertyChanged}"/>
-                <Button Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Add}" Command="{Binding AddMmeCode}" Style="{StaticResource PrimaryButton}"/>
-                <ListView Grid.Column="0" Grid.Row="2" ItemsSource="{Binding MmeCodes}" SelectedValue="{Binding SelectedMmeCodeFromRemove}"/>
-                <Button Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.Delete}" Command="{Binding RemoveMmeCode}" Style="{StaticResource PrimaryButton}"/>
+                <TextBox Grid.Column="0" Grid.Row="0" Text="{Binding NewMmeCode, UpdateSourceTrigger=PropertyChanged}" />
+                <Button Grid.Column="0" Grid.Row="1" Content="{x:Static res:Resources.Add}" Command="{Binding AddMmeCode}" Style="{StaticResource PrimaryButton}" />
+                <ListView Grid.Column="0" Grid.Row="2" ItemsSource="{Binding MmeCodes}" SelectedValue="{Binding SelectedMmeCodeFromRemove}" />
+                <Button Grid.Column="0" Grid.Row="3" Content="{x:Static res:Resources.Delete}" Command="{Binding RemoveMmeCode}" Style="{StaticResource PrimaryButton}" />
             </Grid>
         </TabItem>
     </TabControl>
